z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ iframe {
         right: -10%;
         width: 80%;
         height: 100%;
+        z-index: 999;
         transform: translateX(100%);
         transition: transform 0.3s ease;
     }
